fix width for img on mobile

--- a/assets/css/album-card.css
+++ b/assets/css/album-card.css
@@ -195,6 +195,7 @@
 
     .container-album-card img {
         height: 120px;
+        width: 160px;
     }
 
     .main-container #albums .album-col {
